[package]
name = "sse-bianry"
version = "0.1.0"
edition = "2024"

[dependencies]
binary-codec = { path = "../binary-codec" }
bytes = "1.10.1"

[dev-dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[lib]
name = "sse_binary"
path = "src/lib.rs"

[[example]]
name = "example"
[[example]]
name = "client"
[[example]]
name = "server"
