[package]
name = "szse-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
binary-codec = { path = "../binary-codec" }
byteorder = "1.5.0"
bytes = "1.10.1"

[lib]
name = "szse_binary"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "new_order_bench"
harness = false
